--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "express-session": "^1.17.3",
+    "hashmap": "^2.4.0",
     "http-errors": "~1.6.3",
     "memorystore": "^1.6.7",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.5",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
